あ、設定と設定のあれこれ同期めどいそす

--- a/source/views/application-options.html
+++ b/source/views/application-options.html
@@ -1,10 +1,26 @@
 <html>
+
 	<head>
 	</head>
 
 	<body>
-		<p>💩</p>
+		<ul class="tab">
+			<li>
+				<strong class="tab-header">基本設定</strong>
+				<div class="tab-content">
+
+				</div>
+			</li>
+			<li>
+				<strong class="tab-header">設定一覧</strong>
+				<div class="tab-content">
+
+				</div>
+			</li>
+		</ul>
+
 		<!-- webpack -->
 		<script src="application-options.js"></script>
 	</body>
+
 </html>
