なんだこれ

--- a/source/views/application-options.html
+++ b/source/views/application-options.html
@@ -1,6 +1,10 @@
+<!DOCTYPE html>
 <html>
 
 	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 
 	<body>
@@ -12,7 +16,7 @@
 				</div>
 			</li>
 			<li>
-				<strong class="tab-header">設定一覧</strong>
+				<strong class="tab-header">定義ファイル一覧</strong>
 				<div class="tab-content">
 
 				</div>
