個人的に設定いらんけどアプリ的には必須でしんどす

--- a/source/views/application-options.html
+++ b/source/views/application-options.html
@@ -10,6 +10,7 @@
 	<body>
 		<template id="template-define-item">
 			<li>
+				<button name="action"></button>
 				<span name="name"></span>
 				<span name="version"></span>
 				<time name="updated-timestamp"></time>
