--- a/source/views/application-options.html
+++ b/source/views/application-options.html
@@ -17,7 +17,7 @@
 			</li>
 		</template>
 
-		<div id="loading">
+		<div id="processing">
 			<progress></progress>
 		</div>
 
@@ -64,6 +64,8 @@
 					<ul id="defines">
 						<!-- template-define-item -->
 					</ul>
+					<button id="import" data-we-text="options_tab_content_defines_import">import</button>
+					<ol id="import-log"></ol>
 				</div>
 			</li>
 		</ul>
