--- a/source/views/application-options.html
+++ b/source/views/application-options.html
@@ -9,7 +9,7 @@
 
 	<body>
 		<template id="template-define-item">
-			<li class="list-item">
+			<li class="setting-item">
 				<button name="action" type="button" data-we-text="options_tab_content_defines_item_update" data-we-data-updating="options_tab_content_defines_item_updating">options_tab_content_defines_item_update</button>
 				<span name="name" data-we-title="options_tab_content_defines_item_name"></span>
 				<span name="version" data-we-title="options_tab_content_defines_item_version"></span>
