--- a/source/views/application-options.html
+++ b/source/views/application-options.html
@@ -16,8 +16,34 @@
 				<time name="updated-timestamp" data-we-title="options_tab_content_defines_item_updatedTimestamp"></time>
 				<span name="id" data-we-title="options_tab_content_defines_item_id"></span>
 				<button name="delete" type="button" data-we-text="options_tab_content_defines_item_delete">options_tab_content_defines_item_update</button>
-				<ul name="hosts" class="hosts" data-we-title="options_tab_content_defines_item_hosts">
-				</ul>
+				<details>
+					<summary data-we-text="options_tab_content_defines_item_hosts"></summary>
+					<ul name="hosts" class="hosts">
+					</ul>
+				</details>
+				<details>
+					<summary data-we-text="options_tab_content_defines_item_details"></summary>
+					<table>
+						<tbody>
+							<tr>
+								<td data-we-text="options_tab_content_defines_item_details_updateUrl"></td>
+								<td><a name="update-url"></a></td>
+							</tr>
+							<tr>
+								<td data-we-text="options_tab_content_defines_item_details_website"></td>
+								<td><a name="website-url"></a></td>
+							</tr>
+							<tr>
+								<td data-we-text="options_tab_content_defines_item_details_repository"></td>
+								<td><a name="repository-url"></a></td>
+							</tr>
+							<tr>
+								<td data-we-text="options_tab_content_defines_item_details_document"></td>
+								<td><a name="document-url"></a></td>
+							</tr>
+						</tbody>
+					</table>
+				</details>
 			</li>
 		</template>
 
