--- a/source/views/application-options.html
+++ b/source/views/application-options.html
@@ -8,47 +8,47 @@
 	</head>
 
 	<body>
-		<template id="template-define-item">
+		<template id="template-setting-item">
 			<li class="setting-item">
-				<span name="name" data-we-title="options_tab_content_defines_item_name"></span>
-				<span name="version" data-we-title="options_tab_content_defines_item_version"></span>
-				<time name="updated-timestamp" data-we-title="options_tab_content_defines_item_updatedTimestamp"></time>
+				<span name="name" data-we-title="options_tab_content_settings_item_name"></span>
+				<span name="version" data-we-title="options_tab_content_settings_item_version"></span>
+				<time name="updated-timestamp" data-we-title="options_tab_content_settings_item_updatedTimestamp"></time>
 				<details>
-					<summary data-we-text="options_tab_content_defines_item_hosts"></summary>
+					<summary data-we-text="options_tab_content_settings_item_hosts"></summary>
 					<ul name="hosts" class="hosts"></ul>
 				</details>
 				<details>
-					<summary data-we-text="options_tab_content_defines_item_details"></summary>
+					<summary data-we-text="options_tab_content_settings_item_details"></summary>
 					<table>
 						<tbody>
 							<tr>
-								<td data-we-text="options_tab_content_defines_item_details_updateUrl"></td>
+								<td data-we-text="options_tab_content_settings_item_details_updateUrl"></td>
 								<td><a name="update-url"></a></td>
 							</tr>
 							<tr>
-								<td data-we-text="options_tab_content_defines_item_details_website"></td>
+								<td data-we-text="options_tab_content_settings_item_details_website"></td>
 								<td><a name="website-url"></a></td>
 							</tr>
 							<tr>
-								<td data-we-text="options_tab_content_defines_item_details_repository"></td>
+								<td data-we-text="options_tab_content_settings_item_details_repository"></td>
 								<td><a name="repository-url"></a></td>
 							</tr>
 							<tr>
-								<td data-we-text="options_tab_content_defines_item_details_document"></td>
+								<td data-we-text="options_tab_content_settings_item_details_document"></td>
 								<td><a name="document-url"></a></td>
 							</tr>
 
 							<tr>
-								<td data-we-text="options_tab_content_defines_item_details_id">options_tab_content_defines_item_details_id</td>
+								<td data-we-text="options_tab_content_settings_item_details_id">options_tab_content_settings_item_details_id</td>
 								<td>
 									<code name="id"></code>
 								</td>
 							</tr>
 							<tr>
-								<td data-we-text="options_tab_content_defines_item_details_actions">options_tab_content_defines_item_details_actions</td>
+								<td data-we-text="options_tab_content_settings_item_details_actions">options_tab_content_settings_item_details_actions</td>
 								<td>
-									<button name="delete" type="button" data-we-text="options_tab_content_defines_item_details_actions_delete">options_tab_content_defines_item_details_actions_delete</button>
-									<button name="action" type="button" data-we-text="options_tab_content_defines_item_details_actions_update" data-we-data-updating="options_tab_content_defines_item_details_actions_updating">options_tab_content_defines_item_details_actions_update</button>
+									<button name="delete" type="button" data-we-text="options_tab_content_settings_item_details_actions_delete">options_tab_content_settings_item_details_actions_delete</button>
+									<button name="action" type="button" data-we-text="options_tab_content_settings_item_details_actions_update" data-we-data-updating="options_tab_content_settings_item_details_actions_updating">options_tab_content_settings_item_details_actions_update</button>
 								</td>
 							</tr>
 
@@ -100,12 +100,12 @@
 				</div>
 			</li>
 			<li>
-				<strong class="tab-header" data-we-text="options_tab_header_defines">options_tab_header_defines</strong>
+				<strong class="tab-header" data-we-text="options_tab_header_settings">options_tab_header_settings</strong>
 				<div class="tab-content">
-					<ul id="defines">
-						<!-- template-define-item -->
+					<ul id="settings">
+						<!-- template-setting-item -->
 					</ul>
-					<button id="import" data-we-text="options_tab_content_defines_import">import</button>
+					<button id="import" data-we-text="options_tab_content_settings_import">import</button>
 					<ol id="import-log"></ol>
 				</div>
 			</li>
