設定ファイルの更新タイミングを切り替え可能にした

--- a/source/views/application-options.html
+++ b/source/views/application-options.html
@@ -91,6 +91,12 @@
 								</label>
 							</li>
 							<li>
+								<label>
+									<input id="setting_updatedBeforeTranslation" type="checkbox" />
+									<span data-we-text="options_tab_content_generic_setting_updatedBeforeTranslation">options_tab_content_generic_setting_updatedBeforeTranslation</span>
+								</label>
+							</li>
+							<li>
 								<label for="setting_periodDays">
 									<span data-we-text="options_tab_content_generic_setting_periodDays">options_tab_content_generic_setting_periodDays</span>
 								</label>
