アップデート確認時にブラウザUAを設定

--- a/source/views/application-options.html
+++ b/source/views/application-options.html
@@ -57,7 +57,7 @@
 			</li>
 		</template>
 		<template id="template-setting-item-host">
-			<li><a name="jump" target="_blank"><code name="host"></code></a></a></li>
+			<li><code name="host"></code></a></li>
 		</template>
 
 		<div id="processing">
