--- a/source/views/application-options.html
+++ b/source/views/application-options.html
@@ -47,6 +47,7 @@
 							<tr>
 								<td data-we-text="options_tab_content_settings_item_details_actions">options_tab_content_settings_item_details_actions</td>
 								<td>
+									<button name="editor" type="button" data-we-text="options_tab_content_settings_item_details_actions_update">options_tab_content_settings_item_details_actions_editor</button>
 									<button name="action" type="button" data-we-text="options_tab_content_settings_item_details_actions_update" data-we-data-updating="options_tab_content_settings_item_details_actions_updating">options_tab_content_settings_item_details_actions_update</button>
 									<button name="delete" type="button" data-we-text="options_tab_content_settings_item_details_actions_delete">options_tab_content_settings_item_details_actions_delete</button>
 								</td>
