そんなに詳しいポップアップはいらんかなぁ

--- a/source/views/popup-action.html
+++ b/source/views/popup-action.html
@@ -9,7 +9,8 @@
 
 	<body>
 
-		<strong id="x">POPUP!</strong>
+		<p id="x">POPUP!</p>
+		<p id="y">POPUP!</p>
 
 		<!-- webpack -->
 		<script src="popup-action.js"></script>
