もっかしたらポップアップ出した方がいいかもなので一旦出す方向で実装

--- a/source/styles/extension/popup-action.scss
+++ b/source/styles/extension/popup-action.scss
@@ -1,8 +1,24 @@
-
 #x {
-font-weight: bold;
+	font-weight: bold;
 }
 
 #y {
-	background-color: red;;
+	background-color: red;
+	;
+}
+
+#disabled {
+	display: block;
+
+	&.inactive {
+		display: none;
+	}
+}
+
+#enabled {
+	display: none;
+
+	&.active {
+		display: block;
+	}
 }
