--- a/source/views/popup-action.html
+++ b/source/views/popup-action.html
@@ -8,9 +8,17 @@
 	</head>
 
 	<body>
-
 		<p id="x">POPUP!</p>
 		<p id="y">POPUP!</p>
+
+		<div id="disabled">
+			<p>disabled</p>
+			<img src="extension-icon.svg" />
+		</div>
+
+		<div id="enabled">
+			<p>enabled</p>
+		</div>
 
 		<!-- webpack -->
 		<script src="popup-action.js"></script>
