--- a/source/views/popup-action.html
+++ b/source/views/popup-action.html
@@ -16,22 +16,22 @@
 
 		<main>
 			<section id="disabled">
-				<h1 data-we-text="popup_disabled_title">popup_disabled_title</h1>
+				<h1 data-ext-text="popup_disabled_title">popup_disabled_title</h1>
 				<img class="logo" src="extension-icon.svg" />
-				<p data-we-text="popup_disabled_description_extension">popup_disabled_description_extension</p>
-				<p data-we-text="popup_disabled_description_setting">popup_disabled_description_setting</p>
+				<p data-ext-text="popup_disabled_description_extension">popup_disabled_description_extension</p>
+				<p data-ext-text="popup_disabled_description_setting">popup_disabled_description_setting</p>
 			</section>
 
 			<section id="enabled">
-				<h1 data-we-text="popup_enabled_title">popup_enabled_title</h1>
+				<h1 data-ext-text="popup_enabled_title">popup_enabled_title</h1>
 				<dl>
-					<dt data-we-text="popup_enabled_element_count">popup_enabled_element_count</dt>
+					<dt data-ext-text="popup_enabled_element_count">popup_enabled_element_count</dt>
 					<dd id="element_count"></dd>
 
-					<dt data-we-text="popup_enabled_total_count">popup_enabled_total_count</dt>
+					<dt data-ext-text="popup_enabled_total_count">popup_enabled_total_count</dt>
 					<dd id="total_count"></dd>
 
-					<dt data-we-text="popup_enabled_settings">popup_enabled_settings</dt>
+					<dt data-ext-text="popup_enabled_settings">popup_enabled_settings</dt>
 					<ul id="settings">
 						<!-- #template-setting-item -->
 					</dd>
