翻訳に対する注意文言追加

--- a/source/views/popup-action.html
+++ b/source/views/popup-action.html
@@ -24,6 +24,7 @@
 
 			<section id="enabled">
 				<h1 data-ext-text="popup_enabled_title">popup_enabled_title</h1>
+				<p class="warning" data-ext-text="popup_enabled_warning">popup_enabled_warning</p>
 				<dl>
 					<dt data-ext-text="popup_enabled_element_count">popup_enabled_element_count</dt>
 					<dd id="element_count"></dd>
