--- a/source/views/application-options.html
+++ b/source/views/application-options.html
@@ -73,7 +73,7 @@
 				<form id="generic">
 					<section>
 						<h2 data-ext-text="options_tab_content_generic_translate"></h2>
-						<ul>
+						<ul class="ui-menu">
 							<li>
 								<label>
 									<input id="translate_markReplacedElement" type="checkbox" />
@@ -84,7 +84,7 @@
 					</section>
 					<section>
 						<h2 data-ext-text="options_tab_content_generic_setting">options_tab_content_generic_setting</h2>
-						<ul>
+						<ul class="ui-menu">
 							<li>
 								<label>
 									<input id="setting_autoUpdate" type="checkbox" />
