Squashed commit of the following:
commit b8a884d00199bf111e160ecab3415371eaae5be8
Author: sk <content.type.text.net@gmail.com>
Date:   Thu Nov 17 21:13:26 2022 +0900

    フォント共通化

commit ec324d9b393a23765ee9efcc434ec27326b6709f
Author: sk <content.type.text.net@gmail.com>
Date:   Thu Nov 17 20:50:37 2022 +0900

    新規作成処理対応

commit f453358ac236409e28b2163eb73eca03f716a928
Author: sk <content.type.text.net@gmail.com>
Date:   Thu Nov 17 20:32:27 2022 +0900

    JSONとその構造は気にしない作りなんでこんなもんでしょ

commit c114c700a77564e10c2938a9108bea2073e90bcc
Author: sk <content.type.text.net@gmail.com>
Date:   Thu Nov 17 19:43:05 2022 +0900

    ユーザー入力にJSONCはゆるふわすぎる

commit d1ca9c34558c077f0b238821923bcf9d1cb9eaca
Author: sk <content.type.text.net@gmail.com>
Date:   Thu Nov 17 19:00:11 2022 +0900

    必要要素の列挙を関数化

commit bc05865261174b0155e3543a1222bbc086f89f22
Author: sk <content.type.text.net@gmail.com>
Date:   Wed Nov 16 22:40:26 2022 +0900

    検証書くのめんどいなぁ

commit 26c95b4dfa0d00a33a1bbd10248544d39a018635
Author: sk <content.type.text.net@gmail.com>
Date:   Wed Nov 16 22:19:43 2022 +0900

    なぞボタンサイズ

commit 6d31f1b520a3c472873b9f2ee268a3a380ae46ff
Author: sk <content.type.text.net@gmail.com>
Date:   Wed Nov 16 22:09:11 2022 +0900

    初期表示対応

commit bd59ccb4cac98e5913bf86be35d0c876aa457f0b
Author: sk <content.type.text.net@gmail.com>
Date:   Wed Nov 16 20:56:34 2022 +0900

    スクロールが気に食わんけどもういいよこれで

commit 334a914ecc8ba90a4f8cfcbfca390eb3efeb8907
Author: sk <content.type.text.net@gmail.com>
Date:   Wed Nov 16 19:36:53 2022 +0900

    画面項目はJSON自力入力案

commit 924d34146fd35085211e9ab9143003bec413228b
Author: sk <content.type.text.net@gmail.com>
Date:   Wed Nov 16 15:46:48 2022 +0900

    設定エディタ追加開始

--- a/source/styles/extension/application-options.scss
+++ b/source/styles/extension/application-options.scss
@@ -3,13 +3,12 @@
 
 @use "../core/tab";
 @use "../core/responsive" as responsive;
+@use "./setting";
+@use "./font" as font;
 
-#processing {
-	margin: 0 auto;
-
-	&.processed {
-		display: none;
-	}
+html,
+body {
+	@include font.extension-font;
 }
 
 #options {
@@ -71,22 +70,7 @@ ul.ui-menu {
 	width: 6ch;
 }
 
-input[type="number"] {
-	text-align: right;
-}
-
-button:not([type="button"]) {
-	padding: 0.5em 1em;
-	min-width: 10ch;
-
-	@include responsive.media(responsive.$s) {
-		width: 100%;
-	}
-}
-
 button {
-	padding: 0.5ex 1ex;
-
 	&[name="delete"] {
 		margin-left: 1.5em;
 	}
