--- a/source/views/application-options.html
+++ b/source/views/application-options.html
@@ -48,7 +48,8 @@
 							<tr>
 								<td data-ext-text="options_tab_content_settings_item_details_actions">options_tab_content_settings_item_details_actions</td>
 								<td>
-									<button name="action" type="button" data-ext-text="options_tab_content_settings_item_details_actions_update" data-ext-data-updating="options_tab_content_settings_item_details_actions_updating">options_tab_content_settings_item_details_actions_update</button>
+									<button name="editor" type="button" data-ext-text="options_tab_content_settings_item_details_actions_editor">options_tab_content_settings_item_details_actions_editor</button>
+									<button name="update" type="button" data-ext-text="options_tab_content_settings_item_details_actions_update" data-ext-data-updating="options_tab_content_settings_item_details_actions_updating">options_tab_content_settings_item_details_actions_update</button>
 									<button name="delete" type="button" data-ext-text="options_tab_content_settings_item_details_actions_delete">options_tab_content_settings_item_details_actions_delete</button>
 								</td>
 							</tr>
@@ -117,6 +118,7 @@
 					<ul id="settings">
 						<!-- #template-setting-item -->
 					</ul>
+					<button id="create-setting" data-ext-text="options_tab_content_setting_create">options_tab_content_setting_create</button>
 				</section>
 				<section>
 					<h2 data-ext-text="options_tab_content_settings_import">options_tab_content_settings_import</h2>
