更新系はもうこれで許してお殿様

--- a/source/styles/extension/application-options.scss
+++ b/source/styles/extension/application-options.scss
@@ -75,3 +75,15 @@ button {
 		margin-left: 1.5em;
 	}
 }
+
+table {
+	margin-left: 1ch;
+}
+
+tr>td {
+	padding-right: 1ch;
+}
+
+.setting-item+.setting-item {
+	margin-top: 1em;
+}
