言語一覧追加

--- a/source/views/setting-editor.html
+++ b/source/views/setting-editor.html
@@ -71,7 +71,8 @@
 
 						<dt data-ext-text="editor_tab_content_head_language">editor_tab_content_head_language</dt>
 						<dd>
-							<input id="language" type="text" />
+							<input id="language" type="text" list="language-list" />
+							<datalist id="language-list"></datalist>
 						</dd>
 					</dl>
 				</div>
