--- a/source/styles/extension/popup-action.scss
+++ b/source/styles/extension/popup-action.scss
@@ -1,3 +1,5 @@
+@forward '../../../node_modules/normalize-sass/normalize.sass';
+
 @forward "./details";
 
 @use "./font" as font;
@@ -9,6 +11,7 @@ body {
 html,
 body {
 	@include font.extension-font;
+	padding: 1ex;
 }
 
 #disabled {
